# protege-dados-cgu-2026

./: .gitignore  00_COMECE_AQUI_UPLOAD_4_1.md  ABRIR_PREVIA_LOCAL.bat  ATUALIZAR_PROTEGE_DADOS_5_1.bat  Atualizar_Protege_Dados_5_1.ps1  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMEÇAR_AQUI.md  CONTRIBUTING.md  DATA_LICENSE.md  INSTRUCOES_ATUALIZACAO_5_1.txt  LEIA-ME-4.0.md  LEIA-ME-FINAL.md  LEIA-ME-PRIMEIRO.md  LEIA_PRIMEIRO.txt  LICENSE  PUBLICAR_NO_GITHUB.md  PUBLICAR_NO_GITHUB_5_1.bat  PUBLICAR_VERSAO_5_0.md  Publicar_No_GitHub_5_1.ps1  README.md  RELATORIO_AUDITORIA_TECNICA_5_1.md  SECURITY.md  atualizar_protege_dados_5_1.py  pyproject-4.0.toml  pyproject.toml
config/: ivpd.yml  sources.yml
docs/: ACEITE_RELEASE_4_1.md  ACESSIBILIDADE.md  API_DADOS_ABERTOS.md  ARQUITETURA.md  CHECKLIST_PUBLICACAO.md  FONTES.md  GOVERNANCA_DADOS.md  GUIA_TEMPLATES_VISUAIS_5_1.md  GUIA_TEMPLATES_VISUAIS_5_2.md  LIMITACOES.md  METODOLOGIA.md  PUBLICACAO_PASSO_A_PASSO.md  RELATORIO_ATUALIZACAO_PORTAL_5_1.md  RELATORIO_CORRECAO_PORTAL_5_0.md
evidence/: audit_web_sha256.json  auditoria_completa_5_1.json  manifesto_derivados_sha256.json  manifesto_fontes_fornecidas.json  resumo_resultados.json  testes_tecnicos.json
scripts/: Atualizar_Protege_Dados_2_0.ps1  Atualizar_Protege_Dados_4_0.ps1  Atualizar_Protege_Dados_4_0_FINAL.ps1  audit_complete.py  browser_audit.py  full_audit.py  test_updater.py  validate_portal.py  validate_release.py  verificar_submissao.py
tests/: test_configs.py  test_indicators.py  test_utils.py
web/: 404.html  acessibilidade.html  dados.html  (+6 more)
(+91 files in other folders)
