[project]
name = "protege-dados"
version = "1.0.0"
description = "Pipeline reproduzível e painel aberto da IVPD"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "openpyxl>=3.1",
  "pyarrow>=16",
  "pyyaml>=6.0",
  "pydantic>=2.7",
  "pytest>=8.0"
]

[project.scripts]
protege-dados = "protege_dados.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
